[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["Cory Mills <contact@corymills.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.3"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.2"
langchainhub = "^0.1.21"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
